--- a/style.css
+++ b/style.css
@@ -35,5 +35,11 @@ h2 {
   border-radius: 10px;
   font-size: 20px;
   font-weight: 800;
-  margin: 10px;
+  margin: 20px 10px;
+  line-height: 18px;
+}
+
+.callout-text {
+  font-weight: 600;
+  margin-top: 5px;
 }
